--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="underline">
         </div>
 <div class="icon_wrapper">
-     <img class="carro" src="./images/carro-de-corrida.png"/>
+     <img class="carro" src="./images/carro-de-corrida.png" alt="carro"/>
 </div>
 
 <form action="#" id="contact_form">
