--- a/offline.html
+++ b/offline.html
@@ -4,8 +4,7 @@
   <meta charset="UTF-8">
   <link rel="icon" type="image" href="./images/iconeCarro.png" />
   <link rel="stylesheet" href="css/styleOffline.css">
-  <meta name="viewport" 
-  content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Offline</title>
 </head>
 <body>
